--- a/Kokurikuler/AndroidManifest.xml
+++ b/Kokurikuler/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="18" android:maxSdkVersion="18"/>
     <uses-permission android:name="android.permission.SEND_SMS" android:maxSdkVersion="18"/>
 
     <application
