--- a/Kokurikuler/AndroidManifest.xml
+++ b/Kokurikuler/AndroidManifest.xml
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.padiwp.kokurikuler"
+    package="com.enkripsisms"
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="18" android:maxSdkVersion="18"/>
-    <uses-permission android:name="android.permission.SEND_SMS" android:maxSdkVersion="18"/>
+    <uses-sdk android:minSdkVersion="8" />
 
     <application
-        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" >
+        <activity android:name="tulis_pesan"></activity>
         <activity
-            android:name="com.padiwp.kokurikuler.Main"
-            android:label="@string/app_name" >
-            <intent-filter>
+            android:label="@string/app_name"
+            android:name="Sms" >
+            <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="Inbox"></activity>
+        <activity android:name="baca_sms"></activity>
+        <activity android:name="About"></activity>
     </application>
 
+	<uses-permission android:name="android.permission.READ_CONTACTS"/>
+	<uses-permission android:name="android.permission.SEND_SMS"/>
+	<uses-permission android:name="android.permission.RECEIVE_SMS"/>
+	<uses-permission android:name="android.permission.READ_SMS"/>
+ 	
 </manifest>
